--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amm48.github.io/solid-octo-goggles",
+  "homepage": "https://amm48.github.io/fluffy-journey",
   "name": "weather-api",
   "version": "0.1.0",
   "private": true,
